기존 callback을 활용하여 사진을 업데이트 시 다른 화면으로 전환하면 storage 업로드가 이뤄지지않고 ui업데이트만 진행되는 문제 및 코드의 가독성 해결을 위해 coroutine 적용 및 callback문 일부 삭제

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -11,7 +11,7 @@
     <item
         android:title="User"
         app:showAsAction="ifRoom"
-        android:id="@+id/userFragment"
+        android:id="@+id/setUserInfoFragment"
         android:icon="@drawable/person_24px"/>
 
 </menu>
